@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Bisonc++ V 4.12.00</title>
+<title>Bisonc++ V 4.12.01</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr>
-<h1>Bisonc++ V 4.12.00</h1>
+<h1>Bisonc++ V 4.12.01</h1>
 <h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
 
 <h2>Center for Information Technology, University of Groningen</h2><h2>2005-2015</h2>
@@ -34,15 +34,15 @@ release page):
 <p>
 <ul>
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.11.00">4.12.00</a>
+Oct 01 2015;
+        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.11.00">4.12.00</a>
 Sep 29 2015;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.11.00">4.11.00</a>
 Aug 30 2015;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.10.01">4.10.01</a>
 May 17 2015;
         <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.10.00">4.10.00</a>
-May 17 2015;
-        <li> <a href="https://github.com/fbb-git/bisoncpp/releases/tag/4.09.02">4.09.02</a>
-Jul 28 2014.
+May 17 2015.
         </ul>
     
 <p>
