@@ -1,0 +1,60 @@
+//DECL
+%baseclass-preinclude cmath
+
+%token NUM
+%stype double
+
+//=
+%%
+//RULES
+input:    
+        // empty 
+| 
+        input line
+;
+
+line:   
+        '\n'
+| 
+        exp '\n'  
+        { 
+            std::cout << "\t" << $1 << std::endl;
+        }
+;
+
+exp:      
+        NUM             
+| 
+        exp exp '+'     
+        { 
+            $$ = $1 + $2;    
+        }
+| 
+        exp exp '-'     
+        { 
+            $$ = $1 - $2;    
+        }
+| 
+        exp exp '*'     
+        { 
+            $$ = $1 * $2;    
+        }
+| 
+        exp exp '/'     
+        { 
+            $$ = $1 / $2;    
+        }
+|
+        // Exponentiation:
+        exp exp '^'     
+        { 
+            $$ = pow($1, $2); 
+        }
+|
+        // Unary minus:
+        exp 'n'
+        { 
+            $$ = -$1;        
+        }
+;
+//=
