@@ -1,0 +1,13 @@
+/*
+                              rpn.cc
+*/
+
+#include "rpn.h"
+
+int main()
+{
+    Parser parser;
+
+    parser.parse();
+    return 0;
+}
