@@ -1,0 +1,10 @@
+#ifndef _INCLUDED_RPN_H_
+#define _INCLUDED_RPN_H_
+
+#include <iostream>
+
+#include "parser/Parser.h"
+
+using namespace std;
+
+#endif
