@@ -1,3 +1,9 @@
+bisonc++ (4.12.01)
+
+  * The implementation of the ./build script was improved.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 01 Oct 2015 18:41:45 +0200
+
 bisonc++ (4.12.00)
 
   * Added 'build uninstall'. This command only works if, when calling one of
